修正权限以及 后台管理系统中 订单列表
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/cart/templates/checkout.htm
+++ b/cart/templates/checkout.htm
@@ -40,7 +40,7 @@
                 </tr>
 {% endif %}
                 <tr class="bLine">
-                    <td align="right" colspan="5"><span class="fBold font18">商品总价: ￥<span class="total">{{ cart.countFee|floatformat:2 }}</span> 元 和 0 K金</span></td>
+                    <td align="right" colspan="5"><span class="fBold font18">商品总价: ￥<span class="total">{{ cart.countFee|floatformat:2 }}</span> 元</span></td>
                     <td></td>
                 </tr>
             </table>
@@ -57,7 +57,7 @@
                     <td colspan="6">无</td>
                 </tr>
                 <tr class="bLine">
-                    <td colspan="5" align="right"><span class="fBold font18">总计: ￥0.00 元和0 K金</span></td>
+                    <td colspan="5" align="right"><span class="fBold font18">总计: ￥0.00 元</span></td>
                 </tr>
             </table>
             <h3>收货人信息&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/cart/consignee/" class="btnB sBtn">修改</a></h3>
