--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -32,7 +32,7 @@
                     </tr>
 {% endfor %}
                     <tr class="bLine">
-                        <td align="right" colspan="5"><span class="fBold font18">商品总价: ￥<span class="total">{{ cart.countFee|floatformat:2 }}</span> 元 和 0 K金</span></td>
+                        <td align="right" colspan="5"><span class="fBold font18">商品总价: ￥<span class="total">{{ cart.countFee|floatformat:2 }}</span> 元</span></td>
                         <td></td>
                     </tr>
 {% else %}
