新订单提交修改
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -56,8 +56,8 @@
         <a href="/after/" class="nav">售后管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="/after/">销售反馈</a></li>
-            <li><a href="/tryeat//">试吃反馈</a></li>
+            <li><a href="/after/">普销</a></li>
+            <li><a href="/tryeat//">试吃</a></li>
           </ul>
         </div>
       </li>
