制作通用联系人表单
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -15,6 +15,9 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.dialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jgd.dropdown.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}office/js/base.js"></script>
+    <script type="text/javascript">
+        var csrf = "{% csrf_token %}";
+    </script>
     {% block js %}{% endblock %}
 <!--[if IE 6]>
     <script type="text/javascript" src="{{ STATIC_URL }}js/DD_belatedPNG.js"></script>
