--- a/order/templates/orderneworedit.htm
+++ b/order/templates/orderneworedit.htm
@@ -107,6 +107,7 @@
                   <input type="button" value="订单号附属品" class="button" id="addPostD" />
                 </td>
             </tr>
+            {{ form.as_table }}
         </table>
         <center>
             {% csrf_token %}
