--- a/office/static/office/css/style.css
+++ b/office/static/office/css/style.css
@@ -124,6 +124,45 @@ a.button:active{
 .fr{float: right;}
 .fl{float: left;}
 
+
+table{
+  background: #EEF8F9;
+  border:1px solid #BBDDE5;
+  margin:0 0 15px;
+}
+
+table td{
+  background:#FFFFFF;
+  line-height:24px;
+  padding:0 5px 0 5px;
+  color:#192E32;
+}
+
+.sortTable th{
+  cursor: pointer;
+  white-space: nowrap;
+  background-repeat: no-repeat;
+  background-position: center right;
+}
+
+.sortTable .headerSortUp{
+  background-image: url(/static/images/s_asc.png);
+}
+
+.sortTable .headerSortDown{
+  background-image: url(/static/images/s_desc.png);
+}
+
+.sortTable .odd td{
+  background:#CFC;
+}
+
+
+.tr_border_top_black td{
+  background-color: #F4FAFB;
+  border-top: 1px solid #000;
+}
+
 /* Overall: End */
 
 
@@ -265,6 +304,13 @@ a.button:active{
   margin:0 0 15px;
 }
 
+#content table td{
+  background:#FFFFFF;
+  line-height:24px;
+  padding:0 5px 0 5px;
+  color:#192E32;
+}
+
 #content .sortTable th{
   cursor: pointer;
   white-space: nowrap;
@@ -284,12 +330,6 @@ a.button:active{
   background:#CFC;
 }
 
-#content table td{
-  background:#FFFFFF;
-  line-height:24px;
-  padding:0 5px 0 5px;
-  color:#192E32;
-}
 
 #content .tr_border_top_black td{
   background-color: #F4FAFB;
