--- a/cart/templates/checkout.htm
+++ b/cart/templates/checkout.htm
@@ -60,7 +60,7 @@
                     <td colspan="5" align="right"><span class="fBold font18">总计: ￥0.00 元</span></td>
                 </tr>
             </table>
-            <h3>收货人信息&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/cart/consignee/" class="btnB sBtn">修改</a></h3>
+            <h3>收货人信息&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/consignee/" class="btnB sBtn">修改</a></h3>
             <table width="100%" class="mBottom10">
                 <tr>
                     <td width="100px">收货人姓名：</td>
@@ -76,7 +76,7 @@
                 </tr>
                 <tr>
                     <td>最佳收货时间：</td>
-                    <td>{{ request.session.c.date }}&nbsp;&nbsp;{{ time.start|time:"H:i" }} - {{ time.end|time:"H:i" }}</td>
+                    <td>{{ request.session.c.signDate }}&nbsp;&nbsp;{{ time.start|time:"H:i" }} - {{ time.end|time:"H:i" }}</td>
                 </tr>
                 <tr>
                     <td>备注：</td>
