--- a/shop/static/shop/css/style.css
+++ b/shop/static/shop/css/style.css
@@ -73,11 +73,11 @@
 .pinBox .pinSide960 .pinInfo{float:right;}
 .pinBox .pinDes{/* display:block; */white-space:nowrap;width:470px;overflow:hidden;float:left;color:#999;padding:5px 0 10px 0;}
 .pinBox .pinInfo{color:#999;width:230px;padding:8px 0;display:block;}
-.pinBox .pinInfo .date, .pinBox .pinInfo .loc,.pinBox .pinInfo .camera,.pinBox .pinInfo .pv,.pinBox .pinInfo .like{background:url(/static/images/photoDes.png) no-repeat;padding-left:30px;margin-bottom:5px}
+.pinBox .pinInfo .addDate, .pinBox .pinInfo .loc,.pinBox .pinInfo .camera,.pinBox .pinInfo .pv,.pinBox .pinInfo .like{background:url(/static/images/photoDes.png) no-repeat;padding-left:30px;margin-bottom:5px;line-height: 18px;}
 .pinBox .pinInfo .loc{background-position:0 -25px}
 .pinBox .pinInfo .camera{background-position:0 -87px}
-.pinBox .pinInfo .pv{background-position:0 -112px}
-.pinBox .pinInfo .like{background-position:0 -139px}
+.pinBox .pinInfo .pv{background-position:0 -113px}
+.pinBox .pinInfo .like{background-position:0 -142px}
 .pinBox .tags{width:470px;float:left;display:block;min-height:68px;*height:68px;}
 .pinBox .vote{width:100%;float:left;position:relative;left:0;bottom:0;margin-top:20px}
 .pinBox .vote a{margin-right:10px}
@@ -87,7 +87,7 @@
 
 /* timeBottomBar:Start*/
 
-.showMore{margin:40px 0;background-color:#FFFFFF;border:1px solid #D9D9D9;overflow:hidden;border-radius:1px;*zoom:1;}
+.showMore{width:960px;margin:40px 0;background-color:#FFFFFF;border:1px solid #D9D9D9;overflow:hidden;border-radius:1px;*zoom:1;}
 .showMore .fl,.showMore .fr{background:url(/static/images/timeBottomIcon.png) 0 0 no-repeat;height:80px;line-height:80px;width:120px}
 .showMore .fl{background-position:left 10px;border-right:1px solid #E5E5E5;margin-left:10px;}
 .showMore .fr{background-position:right -69px;border-left:1px solid #E5E5E5;margin-right:10px;}
