优化购物车类 以及联系人类
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/cart/templates/checkout.htm
+++ b/cart/templates/checkout.htm
@@ -24,14 +24,14 @@
                     <th>数量</th>
                     <th>小计</th>
                 </tr>
-{% if cart.itemBuy %}
-{% for i in cart.itemBuy %}
+{% if cart.items %}
+{% for i in cart.items %}
                 <tr align="center">
                     <td>{{ i.item.item.name }}</td>
                     <td>{{ i.item.spec }}</td>
                     <td>￥{{ i.amount|floatformat:2 }} 元</td>
                     <td>{{ i.num }}</td>
-                    <td>￥<span class="st{{ i.v }}">{{ i.subtotal|floatformat:2 }}</span> 元</td>
+                    <td>￥<span class="st{{ i.v }}">{{ i.total|floatformat:2 }}</span> 元</td>
                 </tr>
 {% endfor %}
 {% else %}
@@ -40,7 +40,7 @@
                 </tr>
 {% endif %}
                 <tr class="bLine">
-                    <td align="right" colspan="5"><span class="fBold font18">商品总价: ￥<span class="total">{{ cart.countFee|floatformat:2 }}</span> 元</span></td>
+                    <td align="right" colspan="5"><span class="fBold font18">商品总价: ￥<span class="total">{{ cart.total|floatformat:2 }}</span> 元</span></td>
                     <td></td>
                 </tr>
             </table>
@@ -58,6 +58,7 @@
                 </tr>
                 <tr class="bLine">
                     <td colspan="5" align="right"><span class="fBold font18">总计: ￥0.00 元</span></td>
+                    <td></td>
                 </tr>
             </table>
             <h3>收货人信息&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/consignee/" class="btnB sBtn">修改</a></h3>
