--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -3,7 +3,7 @@
 {% block content %}
       <div class="search" nowrap="true" colspan="3">
           <form action="/order/" method="get">
-            <img src="{{ STATIC_URL }}images/icon_search.gif" border="0" alt="SEARCH" />
+<!--             <img src="{{ STATIC_URL }}images/icon_search.gif" border="0" alt="SEARCH" /> -->
             <select name="c">
               <option value="-1" selected>全部</option>
               <option value="0" >新单</option>
