--- a/consignee/templates/consignee.htm
+++ b/consignee/templates/consignee.htm
@@ -18,7 +18,7 @@
                 <h3>收货人信息</h3>
                 <p>（请填写详细收货地址及准确的最佳送货时间，以便更快捷将您订购的蛋糕送达！）</p>
                 <form action="/cart/checkout/" method="POST" name="checkout" id="checkout">
-                    <table width="100%">
+                    <table width="100%" id="cconsignee">
                         <tr>
                             <td align="right" width="100px">{{ form.pay.label }}：</td>
                             <td>{{ form.pay }}</td>
